--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-3xl;
+    @apply font-medium;
+  }
+  h2 {
+    @apply text-xl;
+    @apply font-semibold;
+  }
+  h3 {
+    @apply text-lg;
+    @apply font-semibold;
+  }
+  h4 {
+    @apply text-base;
+    @apply font-medium;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .section-style {
+    @apply py-10;
+    @apply mx-4;
+  }
+}
+
+.btn {
+  @apply flex ml-auto py-2 px-6 focus:outline-none rounded;
+}
+
+.btn-blue {
+  @apply border-0 text-white bg-indigo-500 hover:bg-indigo-600;
+}
+
+.btn-grey {
+  @apply border text-gray-500 hover:text-gray-900 bg-white border-gray-200  hover:bg-gray-200;
 }
